# ncbi-mcp

./: README.md  demo.py  pyproject.toml
src/ncbi_mcp/: __init__.py  cli.py  client.py  errors.py  handlers.py  main.py  schemas.py  server.py
tests/: test_server.py
